--- a/style.css
+++ b/style.css
@@ -118,11 +118,13 @@ nav {
 #showcase{
     background-image: url('/img/m1.jpg');
     margin-top:8vh;
-    height: 800px;
-    width:100%;
+    height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
+    display:flex;
+    justify-content: center;
 }
+
 
 
 
